[gd_scene load_steps=4 format=3 uid="uid://dx2rlanqcb38v"]

[ext_resource type="Script" path="res://connect.gd" id="1_3ygov"]
[ext_resource type="Script" path="res://check.gd" id="2_ijppp"]
[ext_resource type="Script" path="res://connect2.gd" id="4_0o6nf"]

[node name="Wallet" type="Node2D"]
script = ExtResource("4_0o6nf")

[node name="PollingRequest" type="HTTPRequest" parent="."]

[node name="HandshakeRequest" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Label" type="Label" parent="."]
offset_left = 455.0
offset_top = 173.0
offset_right = 495.0
offset_bottom = 196.0

[node name="Button" type="Button" parent="."]
offset_left = 374.0
offset_top = 237.0
offset_right = 624.0
offset_bottom = 323.0
text = "Connect wallet"

[node name="Button3" type="Button" parent="."]
visible = false
offset_left = 374.0
offset_top = 237.0
offset_right = 624.0
offset_bottom = 323.0
text = "Connect wallet"
script = ExtResource("1_3ygov")

[node name="Button2" type="Button" parent="."]
visible = false
offset_left = 373.0
offset_top = 369.0
offset_right = 623.0
offset_bottom = 455.0
text = "Check status"
script = ExtResource("2_ijppp")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button3" to="Button3" method="_on_pressed"]
[connection signal="pressed" from="Button2" to="Button2" method="_on_pressed"]
